--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "my-gatsby-site",
+  "name": "fire-table",
+  "description": "Fire Table",
   "version": "1.0.0",
-  "private": true,
-  "description": "my-gatsby-site",
-  "author": "michal.kohut",
+  "author": "michalkoh",
+  "dependencies": {
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-sass": "^6.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "keywords": [
     "gatsby"
   ],
-  "engines" : { 
-    "node" : ">=18.0.0"
-  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "gatsby": "^5.9.0",
-    "gatsby-plugin-image": "^3.9.0",
-    "gatsby-plugin-sharp": "^5.9.0",
-    "gatsby-source-filesystem": "^5.9.0",
-    "gatsby-transformer-remark": "^6.9.0",
-    "gatsby-transformer-sharp": "^5.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
