--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "author": "michalkoh",
   "dependencies": {
     "gatsby": "^5.9.0",
+    "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-offline": "^6.9.0",
     "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-sass": "^6.9.0",
+    "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-transformer-sharp": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "keywords": [
     "gatsby"
   ],
-  "engines" : { 
-    "node" : ">=18.0.0"
+  "engines": {
+    "node": ">=18.0.0"
   },
   "scripts": {
     "develop": "gatsby develop",
