--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "michalkoh",
   "dependencies": {
     "gatsby": "^5.9.0",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-offline": "^6.9.0",
