--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
+    "i18next": "^22.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "sass": "^1.62.1"
   },
   "keywords": [
