--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@formspree/react": "^2.4.1",
     "gatsby": "^5.9.0",
+    "gatsby-plugin-canonical-urls": "^5.11.0",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-offline": "^6.9.0",
